Update order management

--- a/apps/stylehunt/package.json
+++ b/apps/stylehunt/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint",
     "db:generate": "prisma generate"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@cofounder/ui": "workspace:*",
     "@cofounder/utils": "workspace:*",
@@ -33,6 +36,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
