--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "buildCommand": "turbo run build",
-  "ignoreCommand": "git diff HEAD^ HEAD --quiet ."
+  "buildCommand": "turbo run build"
 }
